--- a/styles.css
+++ b/styles.css
@@ -69,17 +69,17 @@
     font-size: 60px;
   }
   .semicircle {
-    width: 812px;
-    height: 406px;
+    width: 100%;
+    height: 50vh;
     background-color: #116600;
-    border-top-left-radius: 500px; 
+    border-top-left-radius: 500px;
     border-top-right-radius: 500px;
     position: absolute;
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
     z-index: -1;
-  }
+}
   .image-container {
     position: relative;
     display: flex;
