--- a/styles.css
+++ b/styles.css
@@ -473,6 +473,7 @@
   font-size: 36px;
   font-family: 'Urbanist', sans-serif;
   text-align: center;
+  margin-top: 25px;
 }
 .footer-subtitle {
   font-size: 18px;
