--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* General Reset */
 @import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap');
@@ -69,11 +68,11 @@
     font-size: 60px;
   }
   .semicircle {
-    width: 50vw; /* Use 100% of the viewport width */
-    height: 25vw; /* Set height to 50% of the viewport width (maintains aspect ratio) */
+    width: 50vw;
+    height: 25vh;
     background-color: #116600;
-    border-top-left-radius: 50vw; /* Use 50% of the width to make it fully rounded */
-    border-top-right-radius: 50vw; /* Same as above */
+    border-top-left-radius: 50vw;
+    border-top-right-radius: 50vw;
     position: absolute;
     left: 50%;
     bottom: 0;
